crates/compiler/parser/tests/snapshots/diagnostics__expressions::invalid_gt_sign.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { a > b; }
--- Diagnostics ---
[01] Error: Invalid character
   ╭─[ test.cairo:1:17 ]
   │
 1 │ func test() { a > b; }
   │                 ┬  
   │                 ╰── Invalid character
───╯
