crates/compiler/parser/tests/snapshots/diagnostics__toplevel::empty_import_path.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
from import item
--- Diagnostics ---
[02] Error: found 'import' expected identifier
   ╭─[ test.cairo:1:6 ]
   │
 1 │ from import item
   │      ───┬──  
   │         ╰──── found 'import' expected identifier
───╯
