crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_import_syntax.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
import std.math
--- Diagnostics ---
[02] Error: found 'import' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ import std.math
   │ ───┬──  
   │    ╰──── found 'import' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
