crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_parameter.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test(: felt) { }
--- Diagnostics ---
[02] Error: found ':' expected identifier, or ')'
   ╭─[ test.cairo:1:9 ]
   │
 1 │ fn test(: felt) { }
   │         ┬  
   │         ╰── found ':' expected identifier, or ')'
───╯
