crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_toplevel_assignment.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
x = 10;
--- Diagnostics ---
[02] Error: found 'x' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ x = 10;
   │ ┬  
   │ ╰── found 'x' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
───╯
