crates/compiler/parser/tests/snapshots/diagnostics__toplevel::invalid_toplevel_expression.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
42;
--- Diagnostics ---
[02] Error: found '42' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
   ╭─[ test.cairo:1:1 ]
   │
 1 │ 42;
   │ ─┬  
   │  ╰── found '42' expected 'func', 'struct', 'const', 'namespace', 'use', or end of input
───╯
